dashboard navigation fix

--- a/app/design/frontend/base/default/template/customer/account/dashboard.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard.phtml
@@ -24,7 +24,9 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-	<a href="#" class="right needAssistance fr" title="Need Assitance? Talk to a live rep"><img src="<?php echo $this->getSkinUrl('images/icons/question-mark.png'); ?>" alt="Question mark icon"> Need Assistance</a>
+<div class="right">
+	<a href="#" class="needAssistance fr" title="Need Assitance? Talk to a live rep"><img src="<?php echo $this->getSkinUrl('images/icons/question-mark.png'); ?>" alt="Question mark icon"> Need Assistance</a>
+	</div>
 	
 <div class="dashboard">
     <div class="page-title">
