--- a/app/design/frontend/base/default/template/rewardsref/customer/referral.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral.phtml
@@ -1,6 +1,6 @@
 <div class="referrals">
     <div class="page-title">
-        <h1><?php echo $this->__('Referral Program') ?></h1>
+        <h1><?php echo $this->__('Invite a Friend') ?></h1>
 </div>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 
