invite a friend forms

--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -1,9 +1,8 @@
-<fieldset>
+<fieldset class="page-invite">
 	<h3>Invite your Friends to Join Rooja!</h3>
 	<legend>Copy this link and share to receive Rooja credits!</legend>
         <div class="grid-4-12">
-                <label class="form-lbl">LINK HERE<em class="form-req">*</em></label>
-               <input type="text" class="form-txt form-medium" value="Fill up the field" />
-               <input class="form-button" type="submit" title="send" value="send" />
+               <input class="invite-input" type="text" value="LINK GOES HERE" />
+               <input class="invite-button" type="submit" title="send" value="Copy" />
         </div>
 </fieldset>
