invite a friend forms

--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -1,8 +1,23 @@
 <fieldset class="page-invite">
 	<h3>Invite your Friends to Join Rooja!</h3>
-	<legend>Copy this link and share to receive Rooja credits!</legend>
+	<legend><p>Copy this link and share to receive Rooja credits!</p></legend>
         <div class="grid-4-12">
                <input class="invite-input" type="text" value="LINK GOES HERE" />
                <input class="invite-button" type="submit" title="send" value="Copy" />
         </div>
+		<div class="addthis_toolbox addthis_default_style">
+		<a class="addthis_button_facebook at300b" href="http://www.addthis.com/bookmark.php?v=250&winname=addthis&pub=philosophie&source=tbx-250&lng=en-US&s=facebook&url=http%3A%2F%2Frooja.actsofphilosophie.com%2Fwomen%2Fvictoria-s-secret-collection.html&title=Victoria's%20Secret%20Collection&ate=AT-philosophie/-/-/4e0a6422f79b47b7/1&frommenu=1&uid=4e0a642256062124&ct=1&pre=http%3A%2F%2Frooja.actsofphilosophie.com%2Frewardsref%2Fcustomer%2Findex%2F&tt=0" target="_blank" title="Send to Facebook">
+		<img alt="facebook icon" src="http://rooja.actsofphilosophie.com/skin/frontend/default/rooja/images/icons/facebook-blue-24.png">
+		</a>
+		<a class="addthis_button_twitter at300b" target="_blank" title="Tweet This" href="#">
+		<img alt="twitter icon" src="http://rooja.actsofphilosophie.com/skin/frontend/default/rooja/images/icons/twitter-teal-24.png">
+		</a>
+		<a class="addthis_button_email at300b" title="Email" href="#">
+		<img alt="facebook icon" src="http://rooja.actsofphilosophie.com/skin/frontend/default/rooja/images/icons/email-24.png">
+		</a>
+		<a class="addthis_button_email at300b" title="Email" href="#">
+		<img alt="facebook icon" src="http://rooja.actsofphilosophie.com/skin/frontend/default/rooja/images/icons/plaxo.png">
+		</a>
+		<div class="atclear"></div>
+		</div>
 </fieldset>
