--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -5,19 +5,59 @@
                <input class="invite-input" type="text" value="LINK GOES HERE" />
                <input class="invite-button" type="submit" title="send" value="Copy" />
         </div>
-		<div class="addthis_toolbox addthis_default_style">
-		<a class="addthis_button_facebook at300b" href="http://www.addthis.com/bookmark.php?v=250&winname=addthis&pub=philosophie&source=tbx-250&lng=en-US&s=facebook&url=http%3A%2F%2Frooja.actsofphilosophie.com%2Fwomen%2Fvictoria-s-secret-collection.html&title=Victoria's%20Secret%20Collection&ate=AT-philosophie/-/-/4e0a6422f79b47b7/1&frommenu=1&uid=4e0a642256062124&ct=1&pre=http%3A%2F%2Frooja.actsofphilosophie.com%2Frewardsref%2Fcustomer%2Findex%2F&tt=0" target="_blank" title="Send to Facebook">
-		<img alt="facebook icon" src="http://rooja.actsofphilosophie.com/skin/frontend/default/rooja/images/icons/facebook-blue-24.png">
-		</a>
-		<a class="addthis_button_twitter at300b" target="_blank" title="Tweet This" href="#">
-		<img alt="twitter icon" src="http://rooja.actsofphilosophie.com/skin/frontend/default/rooja/images/icons/twitter-teal-24.png">
-		</a>
-		<a class="addthis_button_email at300b" title="Email" href="#">
-		<img alt="facebook icon" src="http://rooja.actsofphilosophie.com/skin/frontend/default/rooja/images/icons/email-24.png">
-		</a>
-		<a class="addthis_button_email at300b" title="Email" href="#">
-		<img alt="facebook icon" src="http://rooja.actsofphilosophie.com/skin/frontend/default/rooja/images/icons/plaxo.png">
-		</a>
-		<div class="atclear"></div>
-		</div>
+				<!-- AddThis Button BEGIN -->
+				<div class="addthis_toolbox addthis_default_style">
+				<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
+				<a class="addthis_button_twitter"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
+				<a class="#"><img src="<?php echo $this->getSkinUrl('images/icons/plaxo.png'); ?>" alt="plaxo"></a>
+				</div>
+				<script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
+				<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
+				<!-- AddThis Button END -->
+				
 </fieldset>
+
+<!-- THIS LINE --> 
+
+
+<?php if ($this->showReferralUrl() || $this->showReferralCode() || $this->showReferralEmail()): ?>
+
+
+    <fieldset class="group-select my_referrals-urlcode_group">
+        <h4 class="legend"><?php echo $this->__('Referral Codes and URL'); ?></h4>
+
+        <ul>
+            <?php if ($this->showReferralUrl()): ?>
+                <li>
+                    <div class="urlcode-input-box">
+                        <label for="referral_url"><?php echo $this->__('Your Referral URL') ?></label><br />
+                        <input type="text" readonly name="referral_url" value="<?php echo $this->getReferralUrl(); ?>" 
+                               title="<?php echo $this->__('Your Referral URL') ?>" class="input-text" id="referral_url" />
+                    </div>
+                    <BR />
+                    <div class="urlcode_comment"><?php echo $this->__("Referrals that access this URL are connected as referrals once they signup or place an order."); ?></div>
+                </li>
+            <?php endif; ?>
+            <?php if ($this->showReferralCode()): ?>
+                <li>
+                    <div class="urlcode-input-box">
+                        <label for="referral_url"><?php echo $this->__('Your Referral Code') ?></label><br />
+                        <input type="text" readonly name="referral_code" value="<?php echo $this->getReferralCode(); ?>" 
+                               title="<?php echo $this->__('Your Referral Code') ?>" class="input-text" id="referral_code" /> <BR />
+                    </div> <BR />
+                    <div class="urlcode_comment"><?php echo $this->__(" Referrals should enter the code at checkout or signup."); ?></div>
+                </li>
+            <?php endif; ?>
+            <?php if ($this->showReferralEmail()): ?>
+                <li>
+                    <div class="urlcode-input-box">
+                        <label for="referral_url"><?php echo $this->__('Your Referral Email') ?></label><br />
+                        <input type="text" readonly name="referral_email" value="<?php echo $this->getReferralEmail(); ?>" 
+                               title="<?php echo $this->__('Your Referral Email') ?>" class="input-text" id="referral_email" /> <BR />
+                    </div> <BR />
+                    <div class="urlcode_comment"><?php echo $this->__("Referrals should enter your e-mail address at checkout or signup."); ?></div>
+                </li>
+            <?php endif; ?>
+        </ul>
+    </fieldset>
+<?php endif; ?>
