--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -2,14 +2,13 @@
 	<h3>Invite your Friends to Join Rooja!</h3>
 	<legend><p>Copy this link and share to receive Rooja credits!</p></legend>
         <div class="grid-4-12">
-               <input class="invite-input" type="text" value="LINK GOES HERE" />
+               <input class="invite-input" type="text" value="<?php echo $this->getReferralUrl(); ?>" />
                <input class="invite-button" type="submit" title="send" value="Copy" />
         </div>
 				<!-- AddThis Button BEGIN -->
 				<div class="addthis_toolbox addthis_default_style">
 				<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
 				<a class="addthis_button_twitter"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
-				<a class="#"><img src="<?php echo $this->getSkinUrl('images/icons/plaxo.png'); ?>" alt="plaxo"></a>
 				</div>
 				<script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 				<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
