email referral + plaxo integrtegration

--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -1,5 +1,5 @@
 <fieldset class="page-invite">
-	<h3>Invite your Friends to Join Rooja!</h3>
+	<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
 	<legend><p>Copy this link and share to receive Rooja credits!</p></legend>
         <div class="grid-4-12">
                <input class="invite-input" type="text" value="<?php echo $this->getReferralUrl(); ?>" />
