--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -24,19 +24,21 @@
                                 <br/>
                                 <?php echo $this->getChildHtml('plaxo_contact_chooser'); ?>
                             </td>
-                            <td>
-                            	<div class="rewardsref_invite_field_format">
+
+                            <!-- <td>
+                            	 <div class="rewardsref_invite_field_format">
                                     <p class="comment">
-                                        <?php echo $this->__('To reduce the chance that your message is marked as spam, please follow this format:'); ?>
-                                        <BR /><b>&quot;contact name&quot; &lt;email@address.com&gt;</b>
-                                    </p>
-                                    <p class="comment">
-                                        <?php echo $this->__('Example contact list:'); ?><br/>
-                                        &quot;fullname&quot; &lt;email@test.ca&gt;, my@friend.com<br/> 
-                                        email@address.com, another@friend.com, me@test.ca
-                                    </p>
-                                </div>
-                            </td>
+                                    <?php// echo $this->__('To reduce the chance that your message is marked as spam, please follow this format:'); ?>
+                                   <BR /><b>&quot;contact name&quot; &lt;email@address.com&gt;</b>
+                                          </p>
+                                      <p class="comment">
+                                       <?php// echo $this->__('Example contact list:'); ?><br/>
+                                       &quot;fullname&quot; &lt;email@test.ca&gt;, my@friend.com<br/> 
+                                       email@address.com, another@friend.com, me@test.ca
+                                   </p>
+                                </div> 
+                            </td>-->
+
                         </tr>
                     </tbody>
                 </table>
