--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -52,7 +52,7 @@
 
             <div class="input-box">
                 <label for="message"><?php echo $this->__('Message (Optional)') ?> </label>
-                <textarea name="message" id="message" class="required-entry textarea" style="width:100%;" rows="4" cols="80" title="<?php echo $this->__('Short Message') ?>"  ></textarea>
+                <textarea name="message" id="message" class="required-entry textarea" style="width:100%;" rows="4" cols="80" title="<?php echo $this->__('Please accept this invitation to join Rooja.	Rooja provides you access to all of the best deals in fashion, up to 80% off. Membership is free, join today!') ?>"  ></textarea>
             </div>
 
             <div class="button-set" style="margin-top:0px">
