email referral + plaxo integrtegration

--- a/app/design/frontend/base/default/template/rewardsref/customer/referral.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral.phtml
@@ -6,7 +6,7 @@
 
 <?php echo $this->getChildHtml('affiliate'); ?>
 <?php echo $this->getChildHtml('refer_form'); ?>
-<?php echo $this->getChildHtml('preferences'); ?>
+<?php //echo $this->getChildHtml('preferences'); ?>
 <?php echo $this->getChildHtml('history'); ?>
 
 </div>
