email referral + plaxo integrtegration

--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1207,10 +1207,7 @@ tr.summary-details-excluded { font-style:italic; }
 
 /********** Invite a Friend */
 
-h3.page-invite-head  {
-	font: 16px arial #3c474b;
-	font-weight:bold;
-}
+h3.page-invite-head  {font-family: arial; font-size: 16px; color: #3c474b; font-weight:bold;}
 
 fieldset .page-invite {background:#c8d7da;}
 fieldset .email-invite {background:#e0e0e0;}
