email referral + plaxo integrtegration

--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -13,7 +13,7 @@
         <?php //endif; ?> -->
 
         <fieldset>
-            <h4 class="legend"><?php echo $this->__('Send Invitations') ?></h4>
+            <h3 class="page-invite-head"><?php echo $this->__('Send Invitations') ?></h3>
             <div class="input-box" >
                 <label for="to"><?php echo $this->__('To') ?></label>
                 <table>
