styling for referral/invite page

--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -12,6 +12,7 @@
             </div>
         <?php //endif; ?> -->
 
+<div class="half-col left">
         <fieldset>
             <h3 class="page-invite-head"><?php echo $this->__('Send Invitations') ?></h3>
             <div class="input-box" >
