--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -1,4 +1,4 @@
-<fieldset class="page-invite">
+<fieldset class="page-invite half-col right">
 	<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
 	<legend><p>Copy this link and share to receive Rooja credits!</p></legend>
         <div class="grid-4-12">
