styling for referral/invite page

--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -67,5 +67,5 @@
     <script type="text/javascript">
         var dataForm = new VarienForm('form-validate', true);
     </script>
-
+</div>
 <?php endif; ?>
