styling for referral/invite page

--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -12,7 +12,7 @@
             </div>
         <?php //endif; ?> -->
 
-<div class="half-col left">
+<div class="ref-form half-col left">
         <fieldset>
             <h3 class="page-invite-head"><?php echo $this->__('Send Invitations') ?></h3>
             <div class="input-box" >
@@ -52,7 +52,7 @@
             </div>
 
             <div class="input-box">
-                <label for="message" class="valign"><?php echo $this->__('Message (Optional)') ?> </label>
+                <label for="message"><?php echo $this->__('Message (Optional)') ?> </label><br />
                 <textarea name="message" id="message" class="required-entry textarea" style="width:40%;" rows="4" cols="80" title="<?php echo $this->__('Short Message') ?>" >Please accept this invitation to join Rooja. Rooja provides you access to all of the best deals in fashion, up to 80% off. Membership is free, join today!</textarea>
             </div>
 
