--- a/app/design/frontend/base/default/template/rewardsref/customer/referral.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral.phtml
@@ -7,6 +7,7 @@
 <?php echo $this->getChildHtml('affiliate'); ?>
 <?php echo $this->getChildHtml('refer_form'); ?>
 <?php //echo $this->getChildHtml('preferences'); ?>
+<div class="clear"></div>
 <?php echo $this->getChildHtml('history'); ?>
 
 </div>
