--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -1,14 +1,16 @@
-<fieldset class="page-invite half-col right">
-	<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
-	<legend><p>Copy this link and share to receive Rooja credits!</p></legend>
-        <div class="grid-4-12">
-               <input class="invite-input" type="text" value="<?php echo $this->getReferralUrl(); ?>" />
-               <input class="invite-button" type="submit" title="send" value="Copy" />
-        </div>
-				<div class="addthis_toolbox addthis_default_style">
-				<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
-				<a class="addthis_button_twitter"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
-				</div>
-				<script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
-				<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
-</fieldset>
+<div class="page-invite half-col right">
+	<fieldset>
+			<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
+			<legend><p>Copy this link and share to receive Rooja credits!</p></legend>
+	        
+		       <input class="invite-input" type="text" value="<?php echo $this->getReferralUrl(); ?>" />
+		               <input class="invite-button" type="submit" title="send" value="Copy" />
+	
+						<div class="addthis_toolbox addthis_default_style">
+						<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
+						<a class="addthis_button_twitter"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
+						</div>
+						<script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>			
+			<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
+	</fieldset>
+</div>
