--- a/app/design/frontend/base/default/template/customer/account/link/back.phtml
+++ b/app/design/frontend/base/default/template/customer/account/link/back.phtml
@@ -24,6 +24,6 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="buttons-set">
-    <p class="back-link"><a href="<?php echo $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
-</div>
+<!-- <div class="buttons-set">
+    <p class="back-link"><a href="<?php //echo $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?php //echo $this->__('Back') ?></a></p>
+</div> -->
