titles and spacing fix

--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -58,7 +58,7 @@
 
             <div class="button-set" style="margin-top:0px">
                 <!--<a href="<?php echo $this->getBackUrl() ?>" class="left">&laquo; <?php echo $this->__('Back') ?></a>-->
-                <button type="submit" title="<?php echo $this->__('Send Invitiation(s)') ?>" class="button"><span><span><?php echo $this->__('Send Invitiation(s)') ?></span></span></button>
+                <button type="submit" title="<?php echo $this->__('Invite') ?>" class="button"><span><span><?php echo $this->__('Invite') ?></span></span></button>
             </div>
             
         </fieldset>
