fixed styling issue on product name

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -196,7 +196,7 @@ ul#myAccount li ul li a:hover{
 #mainFooter ul#socialLinks, #mainFooter ul#socialLinks a, #copyrightInfo, #copyrightInfo a{color:#c7b299;}
 #mainFooter ul#socialLinks img{vertical-align:middle;margin:5px 5px 5px 0;}
 #twitter_update_list{padding:12px;background:url(../images/bgs/twitter-diag.png) repeat;margin-bottom:8px;}
-#copyrightInfo {margin-top:-50px;}
+#copyrightInfo {margin-top:-20px;}
 #copyrightInfo a{text-decoration:none;}
 
 /* ~~~~~ PAGE ~~~~~ */
@@ -257,7 +257,7 @@ p.question{margin:0;font-weight:bold;color:#431f4c;}
 .product img{position:relative;}
 .product .productCore{background: url("../images/bgs/purp-opacity-photo-diag.png") repeat scroll 0 0 transparent;bottom: 0;height: 38px;left: 0;padding: 6px 10px;position: absolute;width: 210px;z-index: 10;}
 .product .productCore.soldOut{background-image:url(../images/bgs/pink-diag.png);}
-.product .productCore .productName{display:none;color:#fff;padding:6px 10px;background:url(../images/bgs/purp-opacity-photo-diag.png) repeat;text-align:right;}
+.product .productCore .productName{display:none;color:#fff;padding:6px 10px;background:url(../images/bgs/gray-opacity-photo-diag.png) repeat;text-align:right;position:absolute;bottom:50px;width:210px;margin-left:-10px;}
 .productCore .numLikes{float:left;margin-top:10px;background:url(../images/icons/thumbs-up.png) no-repeat top left;padding-left:28px;height:20px;line-height:20px;font-size:1.2em;color:#fff;}
 .productCore .price{float:right;text-align:right;width:140px;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;color:#b4adb3;font-size:1.4em;margin-bottom:0;}
 .productCore .price span.livePrice{font-size:1.71em;display:block; color:#fff;text-decoration: none;}
