--- a/app/design/frontend/default/rooja/template/rewards/checkout/cart.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/checkout/cart.phtml
@@ -44,6 +44,7 @@
  * @author     WDCA Sweet Tooth Team <contact@wdca.ca>
  */
 ?>
+	<div class="container">
 <?php if ($this->hasCartPointsData()): ?>
     <div class="box rewards-cart-box">
         <h4><?php echo $this->__('Use Your Rewards Points!') ?></h4>
@@ -161,3 +162,4 @@
     </div>
 <?php endif; ?>
 
+</div>
