--- a/app/design/frontend/default/rooja/template/customer/dashboard.phtml
+++ b/app/design/frontend/default/rooja/template/customer/dashboard.phtml
@@ -37,6 +37,13 @@
         </div>
         <?php echo $this->getChildHtml('info') ?>
         <?php echo $this->getChildHtml('address') ?>
+
+		<?php /*WDCA CODE BEGINS*/?>
+		<?php if(!Mage::getStoreConfigFlag('advanced/modules_disable_output/TBT_Rewards') 
+		        	&& Mage::getConfig()->getModuleConfig('TBT_Rewards')->is('active', 'true')) : ?>
+			<?php echo Mage::getBlockSingleton('rewards/customer_summary')->toHtml()?>
+		<?php endif;?>
+		<?php /*WDCA CODE ENDS*/?>
     </div>
     <?php echo $this->getChildHtml('info1') ?>
     <?php echo $this->getChildHtml('info2') ?>
