--- a/app/design/frontend/default/rooja/template/page/html/footer.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/footer.phtml
@@ -48,7 +48,7 @@
 		<section class="col1 fl">
 		<h4>Account</h4>
 		<ul>
-			<li><a href="/customers/account">My Account</a></li>
+			<li><a href="/customer/account">My Account</a></li>
 			<li><a href="/checkout/cart">My Cart</a></li>
 		</ul>
 		</section>
