--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -321,6 +321,9 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 .shipping{display:none;}
 .details{display:block;margin:15px 0 0;}
 
+.more-views{display:block;}
+.more-views ul li{float:left;margin-right:10px;}
+
 /* ~~~~~ Typography ~~~~~ */
 
 a {text-decoration:none; color:#000;}
