--- a/app/design/frontend/default/rooja/template/checkout/onepage/progress.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/progress.phtml
@@ -25,9 +25,7 @@
  */
 ?>
 <div class="block block-progress opc-block-progress">
-    <div class="block-title">
-        <strong><span><?php echo $this->__('Your Checkout Progress') ?></span></strong>
-    </div>
+    <h2>Your Checkout Progress</h2>
     <div class="block-content">
         <dl>
         <?php if ($this->getCheckout()->getStepData('billing', 'is_show')): ?>
