--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1216,8 +1216,8 @@ fieldset .email-invite {background:#e0e0e0;}
 
 .page-invite {background:#c8d7da;}
 
-input.invite-input {height: 40px;}
-input.invite-button{height: 40px; color: #fff; font-size:14px; padding: 0px 10px; background: #868686;}
+input.invite-input {height: 36px;line-height:36px;padding:0px 8px;width:265px;}
+input.invite-button{height: 36px; color: #fff; font-size:14px; padding: 0px 10px; background: #868686;}
 
 .addthis_default_style {padding: 10px 0;}
 
